# arrow-convert

./: Cargo.toml  README.md
arrow_convert/: Cargo.toml
arrow_convert/benches/: bench.rs
arrow_convert/src/: field.rs
arrow_convert/src/deserialize/: mod.rs
arrow_convert/src/features/: uuid.rs
arrow_convert/src/serialize/: mod.rs
arrow_convert/tests/: complex_example.rs  simple_example.rs  test_array.rs  test_deserialize.rs  test_enum.rs  test_flatten_record_batch.rs  test_round_trip.rs  test_rust_decimal.rs  test_schema.rs  test_serialize.rs  test_struct.rs  test_uuid.rs
arrow_convert_derive/src/: derive_enum.rs  derive_struct.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
